modules/aws-client-utility/data/ec2_DescribeRouteTables_us-east-1_None.json
{"service": "ec2", "region": "us-east-1", "profile": null, "operation": "DescribeRouteTables", "response": {"RouteTables": [{"Associations": [{"Main": true, "RouteTableAssociationId": "rtbassoc-0461b9972584cea40", "RouteTableId": "rtb-0ef3b2337d0133c6a", "AssociationState": {"State": "associated"}}], "PropagatingVgws": [], "RouteTableId": "rtb-0ef3b2337d0133c6a", "Routes": [{"DestinationCidrBlock": "172.31.0.0/16", "GatewayId": "local", "Origin": "CreateRouteTable", "State": "active"}, {"Destina [...]
